--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <div class="intro" data-aos="fade-right" data-aos-delay="150">
               <div class="eyebrow d-inline-flex align-items-center gap-2 mb-3">
                 <span class="dot"></span>
-                <span class="text">Technology Solutions & Digital Innovation</span>
+                <span class="text">Tested - Technology Solutions & Digital Innovation</span>
               </div>
 
               <h1 class="display-heading mb-3">
