--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               </h1>
 
               <p class="lead mb-4">
-                Huaaallala We specialize in crafting cutting-edge websites and robust system architectures that drive business growth. From concept to deployment, we deliver scalable, secure, and innovative technology solutions tailored to your unique needs.
+                We specialize in crafting cutting-edge websites and robust system architectures that drive business growth. From concept to deployment, we deliver scalable, secure, and innovative technology solutions tailored to your unique needs.
               </p>
 
               <div class="cta-group d-flex flex-wrap align-items-center gap-3" data-aos="zoom-in" data-aos-delay="250">
